# slam11

./: .gitignore  CONTEXT.md  readme.md
src/lightning-lm/: .gitignore  CMakeLists.txt  README.md  README_CN.md  d100_slam_session.sh  package.xml
src/lightning-lm/cmake/: packages.cmake
src/lightning-lm/config/: d100_loc.yaml  d100_slam_back.yaml  d100_slam_back_from_merged_headless.yaml  d100_slam_back_from_merged_nosplit_headless.yaml  d100_slam_back_headless_current.yaml  d100_slam_back_headless_current_loop_limited_free_clearing.yaml  d100_slam_back_headless_current_loop_no_free_clearing.yaml  d100_slam_back_headless_current_no_loop.yaml  d100_slam_back_headless_current_no_loop_limited_free_clearing.yaml  d100_slam_back_headless_current_no_loop_no_free_clearing.yaml  d100_slam_sim.yaml  default.yaml  default_livox.yaml  default_nclt.yaml  default_robosense.yaml  default_utbm.yaml  default_vbr.yaml
src/lightning-lm/msg/: NavState.msg
src/lightning-lm/scripts/: install_dep.sh  merge_bags.py  save_default_map.sh
src/lightning-lm/src/: CMakeLists.txt
src/lightning-lm/src/app/: CMakeLists.txt  run_frontend_offline.cc  run_loc_offline.cc  run_loc_online.cc  run_loop_offline.cc  run_slam_offline.cc  run_slam_online.cc  test_ui.cc
src/lightning-lm/src/common/: constant.h  eigen_types.h  functional_points.h  imu.h  keyframe.h  loop_candidate.h  measure_group.h  nav_state.cc  nav_state.h  odom.h  options.cc  options.h  params.cc  params.h  point_def.h  pose_rpy.h  s2.hpp  std_types.h  timed_pose.h
src/lightning-lm/src/core/: lightning_math.hpp
src/lightning-lm/src/core/g2p5/: g2p5.cc  g2p5.h  g2p5_grid_data.h  g2p5_map.cc  g2p5_map.h  g2p5_subgrid.cc  g2p5_subgrid.h
src/lightning-lm/src/core/ivox3d/: hilbert.hpp  ivox3d.h  ivox3d_node.hpp
src/lightning-lm/src/core/lio/: anderson_acceleration.h  eskf.cc  eskf.hpp  imu_filter.h  imu_processing.hpp  laser_mapping.cc  laser_mapping.h  pointcloud_preprocess.cc  pointcloud_preprocess.h  pose6d.h
src/lightning-lm/src/core/localization/: localization.cpp  localization.h  localization_result.cc  localization_result.h
src/lightning-lm/src/core/localization/lidar_loc/: lidar_loc.cc  lidar_loc.h
src/lightning-lm/src/core/localization/lidar_loc/pclomp/: ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
src/lightning-lm/src/core/localization/pose_graph/: pgo.cc  pgo.h  pgo_impl.cc  pgo_impl.h  pose_extrapolator.cc  pose_extrapolator.h  smoother.h
src/lightning-lm/src/core/loop_closing/: loop_closing.cc  loop_closing.h
src/lightning-lm/src/core/maps/: tiled_map.cc  tiled_map.h  tiled_map_chunk.cc  tiled_map_chunk.h
src/lightning-lm/src/core/miao/: CMakeLists.txt
src/lightning-lm/src/core/miao/core/: CMakeLists.txt
src/lightning-lm/src/core/miao/core/common/: config.h  macros.h  math.h  string_tools.cc  string_tools.h
src/lightning-lm/src/core/miao/core/graph/: base_binary_edge.h  base_edge.h  base_fixed_sized_edge.h  base_fixed_sized_edge.hpp  base_unary_edge.h  base_vec_vertex.h  base_vertex.h  edge.h  graph.cc  graph.h  optimizer.cc  optimizer.h  vertex.h
src/lightning-lm/src/core/miao/core/math/: marginal_covariance_cholesky.cc  marginal_covariance_cholesky.h  matrix_operations.h  misc.h
src/lightning-lm/src/core/miao/core/opti_algo/: algo_select.h  opti_algo_dogleg.cc  opti_algo_dogleg.h  opti_algo_gauss_newton.cc  opti_algo_gauss_newton.h  opti_algo_lm.cc  opti_algo_lm.h  optimization_algorithm.cc  optimization_algorithm.h
src/lightning-lm/src/core/miao/core/robust_kernel/: cauchy.h  dcs.h  fair.h  huber.h  mc_clure.h  pseudo_huber.h  robust_kernel.h  robust_kernel_all.h  saturated.h  tukey.h  welsch.h
src/lightning-lm/src/core/miao/core/solver/: block_solver.h  block_solver.hpp  linear_solver.h  linear_solver_ccs.h  linear_solver_dense.h  linear_solver_eigen.h  linear_solver_pcg.h  linear_solver_pcg.hpp  solver.cc  solver.h
src/lightning-lm/src/core/miao/core/sparse/: sparse_block_matrix.h  sparse_block_matrix.hpp  sparse_block_matrix_ccs.h  sparse_block_matrix_diagonal.h  sparse_block_matrix_hashmap.h
src/lightning-lm/src/core/miao/core/types/: edge_se2.h  edge_se2_prior.h  edge_se3.h  edge_se3_height_prior.h  edge_se3_prior.h  vertex_pointxyz.h  vertex_se2.h  vertex_se3.h
src/lightning-lm/src/core/miao/examples/: CMakeLists.txt
src/lightning-lm/src/core/miao/examples/bal/: CMakeLists.txt  bal_example.cc
src/lightning-lm/src/core/miao/examples/data_fitting/: CMakeLists.txt  circle_fit.cc  curve_fit.cc
src/lightning-lm/src/core/miao/examples/icp/: CMakeLists.txt  gicp_demo.cc
src/lightning-lm/src/core/miao/examples/incremental/: CMakeLists.txt  incremental.cc
src/lightning-lm/src/core/miao/examples/pose_graph/: CMakeLists.txt  pose_graph.cc
src/lightning-lm/src/core/miao/examples/sba/: CMakeLists.txt  (+1 more)
src/lightning-lm/src/core/miao/utils/: CMakeLists.txt  sampler.cc  sampler.h  tuple_tools.h
src/lightning-lm/src/core/system/: async_message_process.h  loc_system.cc  loc_system.h  slam.cc  slam.h
src/lightning-lm/src/io/: dataset_type.h  file_io.cc  file_io.h  yaml_io.cc  yaml_io.h
src/lightning-lm/src/ui/: pangolin_window.cc  pangolin_window.h  pangolin_window_impl.cc  pangolin_window_impl.h  ui_car.cc  ui_car.h  ui_cloud.cc  ui_cloud.h  ui_trajectory.cc  ui_trajectory.h
src/lightning-lm/src/utils/: async_message_process.h  pointcloud_utils.cc  pointcloud_utils.h  sync.h  timer.cc  timer.h
src/lightning-lm/src/wrapper/: bag_io.cc  bag_io.h  ros_utils.h
src/lightning-lm/srv/: LocCmd.srv  SaveMap.srv  SavePath.srv
src/mujoco_sim/: package.xml  setup.cfg  setup.py
src/mujoco_sim/config/: pointcloud_merger_d100_dynamic_self_filter.yaml
src/mujoco_sim/launch/: d100_pointcloud_merger_dynamic_self_filter.launch.py
src/mujoco_sim/mujoco_sim/: dynamic_self_filter.py  fake_lidar_triplet_publisher.py  imu_converter.py  pointcloud_merger.py  pointcloud_merger_core.py  sim_imu_bridge.py  sim_lidar_publisher.py  slam_tf_bridge.py
src/mujoco_sim/test/: test_dynamic_self_filter.py  test_imu_converter.py  test_pointcloud_merger_core.py
(+16 files in other folders)
